--- a/vignettes/mr.Rmd
+++ b/vignettes/mr.Rmd
@@ -32,13 +32,13 @@ The above code initialized a `Music` object, to which we can add components:
 ```{r}
 m <- m +
   Meter(4, 4) +
-  Line(pitches = list("C5", "E5"), durations = list(2, 2))
+  Line(pitches = list("C5"), durations = list("whole"))
 ```
 
 We have added two components to the `Music` object:
 
 1. a 4/4 time signature and
-2. a musical line consisting of a C5 half note and an E5 half note.
+2. a musical line consisting of a C5 whole note.
 
 If we print the `Music` object in an R console, we get a brief description of
 it:
@@ -66,8 +66,8 @@ Add another musical line as a part:
 
 ```{r}
 m <- m + Line(
-  pitches = list("C3", "D3", "E3", "F3"),
-  durations = list(1, 1, 1, 1)
+  pitches = list("C3", "G3"),
+  durations = list("half", "half")
 )
 
 show(m)
@@ -77,8 +77,8 @@ Add another musical line as a voice:
 
 ```{r}
 m <- m + Line(
-  pitches = list(c("E4", "G4")),
-  durations = list(4),
+  pitches = list(c("E4", "G4"), c("D4", "F4"), c("F4", "A4"), c("E4", "G4")),
+  durations = list("quarter", "quarter", "quarter", "quarter"),
   as = "voice",
   to = 1
 )
