--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# gm
+# gm <img src="man/figures/logo.png" align="right" alt="logo" width="120"/>
 
 <!-- badges: start -->
 <!-- badges: end -->
