--- a/README.Rmd
+++ b/README.Rmd
@@ -17,7 +17,7 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-Generate musical scores and audio files easily, and show them in R Markdown
+Create music easily, and show musical scores and audio files in R Markdown
 documents, R Jupyter Notebooks and RStudio.
 
 
