--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -263,16 +263,15 @@ just `"q"`,
 tuplets.
 
 The most basic duration notations consist of only duration types. The
-duration types defined in gm are:
+duration types (and their abbreviations) defined in gm are:
 
 ```{r, echo = FALSE}
-gm:::duration_types
-```
-
-Their abbreviations are:
-
-```{r, echo = FALSE}
-gm:::duration_type_abbrs
+for (i in 1:length(gm:::duration_types)) {
+  cat(paste0(
+    '"', (gm:::duration_types)[i], '" (',
+    '"', (gm:::duration_type_abbrs)[i], '")\n'
+  ))
+}
 ```
 
 For example, the following musical line consists of a whole rest, a quarter
