Accept non logical NA

--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -197,7 +197,7 @@ notes,
 2. single MIDI note numbers, like `60` or `"60"`, also to represent the pitch
 contents of notes,
 
-3. single logical `NA`s to represent the pitch contents of rests, and
+3. single `NA`s to represent the pitch contents of rests, and
 
 4. vectors of pitch notations and MIDI note numbers, like `c("C4", "61")`,
 to represent the pitch contents of chords.
