--- a/vignettes/gm.Rmd
+++ b/vignettes/gm.Rmd
@@ -20,48 +20,52 @@ knitr::opts_chunk$set(
 
 The package name "gm" means "grammar of music" or "generate music".
 
-It provides an elegant and intuitive language, with which you can create
-music easily. It generates and embeds musical scores and audio files in R Markdown documents, R Jupyter Notebooks and RStudio seamlessly.
+It provides a simple and intuitive high-level language, with which you can
+create music easily. It generates and embeds musical scores and audio files
+in R Markdown documents, R Jupyter Notebooks and RStudio seamlessly.
 
 Let's go through a quick example to get a feeling of it.
 
 
 ## Quick Example
 
-```{r, message = FALSE}
-library(gm)
+Load gm:
 
+```{r message = FALSE}
+library(gm)
+```
+
+Initialize an empty `Music` object:
+
+```{r}
 m <- Music()
 ```
 
-We have initialized an empty `Music` object, to which we can add components:
+Add components:
 
 ```{r}
 m <- m +
+  # add a 4/4 time signature
   Meter(4, 4) +
+  # add a musical line of a C5 whole note
   Line(pitches = list("C5"), durations = list("whole"))
 ```
 
-We have added two components:
-
-1. a 4/4 time signature and
-2. a musical line which consists of a C5 whole note.
-
-We can print the `Music` object to get a brief description of it:
+Print the `Music` object to see a brief description of it:
 
 ```{r}
 m
 ```
 
-We can convert the `Music` object to musical score and audio file:
+Convert the `Music` object to musical score and audio file:
 
 ```{r}
 show(m, to = c("score", "audio"))
 ```
 
-We can add more components.
+Continue.
 
-Add a tempo mark, for example:
+Add a tempo mark:
 
 ```{r}
 m <- m + Tempo(120)
@@ -98,42 +102,60 @@ let's first learn how to install and configure gm.
 
 ## Installation and Configuration
 
-Install gm:
+Install gm from CRAN:
 
 ```r
 install.packages("gm")
 ```
 
-Or the development version from GitHub:
+Or install the development version from GitHub:
 
 ```r
+# install devtools if not
 # install.packages("devtools")
+
 devtools::install_github("flujoo/gm")
 ```
 
-MuseScore, an open source and free notation software, is required. Get it
-from <https://musescore.org/>.
+Download and install [MuseScore](https://musescore.org/),
+an open source and free notation software, which gm uses internally.
 
-If you don't install MuseScore to the default path (see
-<https://musescore.org/en/handbook/3/revert-factory-settings>),
-you need to specify the path to the MuseScore executable:
+If you don't install MuseScore to the
+[default path](https://musescore.org/en/handbook/3/revert-factory-settings),
+please specify the path to the MuseScore executable.
 
-1. Open ".Renviron" file. You can do this with `usethis::edit_r_environ()`.
+First, open .Renviron file. You can do this with
 
-2. Add `MUSESCORE_PATH=<path to MuseScore executable>` into it.
-For example, suppose on a computer using Windows the path is
-"C:/Program Files/MuseScore 3/bin/MuseScore3.exe", you can add
-`MUSESCORE_PATH=C:/Program Files/MuseScore 3/bin/MuseScore3.exe`, if gm
-can't figure it out.
+```r
+usethis::edit_r_environ()
+```
 
-3. Restart R session to activate the change.
+Next, add an environment variable into it:
+
+```
+MUSESCORE_PATH=<path to MuseScore executable>
+```
+
+Last, restart R session to activate the change.
+
+For example, suppose the path on a Windows system is
+
+```
+C:/Program Files/MuseScore 3/bin/MuseScore3.exe
+```
+
+If gm can't find it, you can add
+
+```
+MUSESCORE_PATH=C:/Program Files/MuseScore 3/bin/MuseScore3.exe
+```
 
 Now below is a complete guide to gm.
 
 
 ## `Music` Objects
 
-In gm, we use `Music` objects to represent music.
+gm uses `Music` objects to represent music.
 
 The workflow is usually like this:
 
@@ -147,6 +169,8 @@ to check its structure.
 4. Keep adding components and checking it until you get what you want.
 
 5. Sometimes you may want to export the final `Music` object with `export()`.
+
+The workflow and the grammar may remind you of ggplot2.
 
 Let's have a look at each component that you can add to a `Music` object.
 
@@ -210,9 +234,9 @@ A pitch notation consists of
 
 A MIDI note number is a number between 12 and 127.
 
-See
-<https://en.wikipedia.org/wiki/Scientific_pitch_notation#Table_of_note_frequencies>
-for a conversion table of pitch notations and MIDI note numbers.
+See a
+[conversion table](https://en.wikipedia.org/wiki/Scientific_pitch_notation#Table_of_note_frequencies)
+of pitch notations and MIDI note numbers.
 
 An advantage of MIDI note numbers is that they are easy to operate. For
 example, we have the following four MIDI note numbers:
@@ -813,11 +837,50 @@ show(m, to = c("score", "audio"))
 ```
 
 
+## Comparison
+
+At the time of writing, the author knows only 
+[tabr](https://github.com/leonawicz/tabr)
+that has similar purposes and similar level of functionality to gm,
+among other R packages.
+
+However, there are some noticeable differences:
+
+- Besides music generation, tabr also provides functions for music analysis
+and manipulation.
+- tabr can generate guitar tabs and add more music notation symbols to
+score than gm can. gm is not yet for professional level music notation.
+- gm embeds generated music in R Markdown documents and R Jupyter Notebooks,
+while tabr exports it.
+- gm uses R's basic data structures such as vector and list
+to represent music, while tabr uses strings.
+- gm's language is simpler than tabr's, it is more straightforward
+to add components such as musical lines in gm. This and the above difference
+make gm more suitable for music programming.
+
+In Python, [music21](http://web.mit.edu/music21/)
+is a mature library which provides abundant
+tools for music generation and analysis. For its music generation 
+functionality, music21 can generate more professional musical scores than
+gm can, and also works in Python Jupyter Notebooks. However, at its core,
+gm's language is far simpler and more intuitive. For example, in music21, 
+
+- it's cumbersome to define notes and add them to musical
+lines,
+- users have to be concerned about musical score structures when they only
+want to express music structures at a higher level,
+- creation of complex and nested tuplets is not straightforward,
+- ...
+
+In summary, gm is a good tool for expression of high-level music structures
+and communication of generated music. It's not yet for professional level
+music notation.
+
+
 ## Algorithmic Composition
 
-gm provides a simple and intuitive language, with which you can express
-complex music easily. One possible usage of gm is algorithmic composition,
-which means using algorithms to create music.
+gm's language is simple but powerful. One possible use of gm is
+algorithmic composition, which means using algorithms to create music.
 
 Below is an example:
 
@@ -836,11 +899,26 @@ show(m, to = c("score", "audio"))
 
 The code generates nine parts which all contain the same pitch and durational
 contents. The only difference is that their delays are gradually increased,
-to create the echo sound effect.
+to create the interesting echo sound effect.
+
+In this example, you can see how gm uses R's basic data structures to
+represent pitches and durations, and how gm's language is simple and 
+high-level. These two features make gm very suitable for music programming,
+without users considering music notation details.
 
 
-## Cite gm
+## Citation, Donation and Contact
+
+Cite gm:
 
 ```r
 citation(package = "gm")
 ```
+
+if you appreciate gm, please consider a donation:
+
+<https://ko-fi.com/flujoo>
+
+Please free to contact me if you want to say anything:
+
+renfeimao AT gmail.com
